Gymnasium usecase 2 (Cartpole)

--- a/Cartpole_using_DQN.ipynb
+++ b/Cartpole_using_DQN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP28y+SCNnVu8wviGc4/Nn8",
+      "authorship_tag": "ABX9TyOlFaijSeUAd/OnyvUkueAg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ltl_3WRrkBOi",
-        "outputId": "c331de33-5646-4a0a-b249-b76a53f39d2b"
+        "outputId": "acac2af4-1d92-4561-e2e0-5c1b8cfe7dc5"
       },
       "outputs": [
         {
@@ -53,7 +53,7 @@
             "Requirement already satisfied: pygame>=2.1.3 in /usr/local/lib/python3.10/dist-packages (from gymnasium[classic_control]) (2.6.0)\n",
             "Downloading Farama_Notifications-0.0.4-py3-none-any.whl (2.5 kB)\n",
             "Downloading gymnasium-0.29.1-py3-none-any.whl (953 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m953.9/953.9 kB\u001b[0m \u001b[31m19.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m953.9/953.9 kB\u001b[0m \u001b[31m13.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: farama-notifications, gymnasium\n",
             "Successfully installed farama-notifications-0.0.4 gymnasium-0.29.1\n"
           ]
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "GxsauIRBprSU"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "tSydsjWatNzP"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -145,14 +145,82 @@
       "metadata": {
         "id": "J0ApL_6ewkFZ"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\"\"\"Batch size is the number of transitions sampled from the replay buffer.\"\"\"\n",
+        "BATCH_SIZE = 128\n",
+        "\n",
+        "GAMMA = 0.99 # discount factor\n",
+        "EPS_START = 0.9 # starting value of epsilon\n",
+        "EPS_END = 0.05  # final value of epsilon\n",
+        "EPS_DECAY = 1000 # exponential decay rate for epsilon\n",
+        "TAU = 0.005 # update rate of target network\n",
+        "LR = 1e-4"
+      ],
       "metadata": {
         "id": "HAAEPvwo1AB6"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get the number of actions from gym action space\n",
+        "n_actions = env.action_space.n\n",
+        "\n",
+        "# get the number of state observations\n",
+        "state,info = env.reset()\n",
+        "\n",
+        "\n",
+        "n_observations = len(state)\n",
+        "\n",
+        "\"\"\"target_net is initialized with same weights as policy_net\"\"\"\n",
+        "policy_net = DQN(n_observations, n_actions).to(device)\n",
+        "target_net = DQN(n_observations, n_actions).to(device)\n",
+        "target_net.load_state_dict(policy_net.state_dict())\n",
+        "\n",
+        "optimizer = optim.AdamW(policy_net.parameters(), lr=LR, amsgrad=True)\n",
+        "\"\"\"Memory will store the agent's experiences, which will be used for training\"\"\"\n",
+        "memory = ReplayMemory(10000)\n",
+        "\n",
+        "\"\"\"keep track of steps taken by agent\"\"\"\n",
+        "steps_done = 0\n",
+        "\n",
+        "def select_action(state):\n",
+        "  global steps_done\n",
+        "  sample = random.random()\n",
+        "  eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "  steps_done += 1\n",
+        "  if sample > eps_threshold:\n",
+        "    with torch.no_grad():\n",
+        "      return policy_net(state).max(1)[1].view(1,1)\n",
+        "  else:\n",
+        "    return torch.tensor([[env.action_space.sample()]], dtype=torch.long)\n",
+        "# used to keep track of duration of each episode\n",
+        "episode_durations = []\n",
+        "\n",
+        "def plot_duration(show_result=False):\n",
+        "  plt.figure(1)\n",
+        "  duration_t = torch.tensor(episode_durations, dtype=torch.float)\n",
+        "  if show_result:\n",
+        "    plt.title('Result')\n",
+        "  else:\n",
+        "    plt.clf()\n",
+        "    plt.title('Training...')\n",
+        "  plt.xlabel('Episode')\n",
+        "  plt.ylabel('Duration')\n",
+        "  plt.plot(durations_t.numpy())\n",
+        "\n",
+        "  if (len(durations_t) >= 100):\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "n5pUZ5qBk2XJ"
       },
       "execution_count": null,
       "outputs": []
